Progress: test_assess(), rename control->session

--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -10,7 +10,7 @@ Observer ini = EVD.ini
 [Session]
 # Used only by MP session (lightcurve) photometry (workflow_session.py).
 Session Top Directory = C:/Astro/MP Photometry/
-Session Control Filename = control.ini
+Session Control Filename = session.ini
 Session Log Filename = session.log
 df_obs filename = df_obs_all.csv
 df_images filename = df_images_all.csv
