--- a/ini/instrument/$test_only.ini
+++ b/ini/instrument/$test_only.ini
@@ -21,7 +21,7 @@ Y Pixels = 2047
 # Gain is in electrons/ADU.
 CCD Gain = 1.57
 Saturation ADU = 54000
-Max Vignetting Pct At Corner = 38
+Vignetting Pct At Corner = 38
 
 [Plate Solution]
 Pinpoint Pixel Scale Multiplier = 0.99388
