--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -12,9 +12,10 @@ Observer ini = EVD.ini
 Session Top Directory = C:/Astro/MP Photometry/
 Session Control Filename = session.ini
 Session Log Filename = session.log
-df_obs filename = df_obs_all.csv
 df_images filename = df_images_all.csv
 df_comps filename = df_comps_all.csv
+df_comp_obs filename = df_comp_obs_all.csv
+df_mp_obs filename = df_mp_obs_all.csv
 Session image prefix = Image_Session_
 Fit summary filename = fit_summary.txt
 ALCDEF filename prefix = alcdef_
