class MPfile imported; progress on do_session()

--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -27,4 +27,6 @@ Color Control Filename = color_control.ini
 Color Control Template Filename = color_control.template
 Color Log Filename = mp_color.log
 Color image prefix = Image_Color_
-# ... and probably more to add later...
+
+[Other]
+MPfile directory = C:/Dev/Photometry/MPfile
