--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -9,7 +9,7 @@ Observer ini = EVD.ini
 
 [Session]
 # Used only by MP session (lightcurve) photometry (workflow_session.py).
-Session Top Directory = C:/Astro/MP Photometry/
+Session Top Directory = C:/Astro/MP Photometry
 Session Control Filename = session.ini
 Session Log Filename = session.log
 df_images filename = df_images_all.csv
@@ -29,4 +29,5 @@ Color Log Filename = mp_color.log
 Color image prefix = Image_Color_
 
 [Other]
-MPfile directory = C:/Dev/Photometry/MPfile
+# Only .../Archive for test purposes.
+MPfile directory = C:/Dev/Photometry/MPfile/Archive
