move common fns to common.py; early start on color.py

--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -8,7 +8,7 @@ Site ini = DSW.ini
 Observer ini = EVD.ini
 
 [Session]
-# Used only by MP session (lightcurve) photometry (workflow_session.py).
+# Used only by MP session (lightcurve) photometry (session.py).
 Session Top Directory = C:/Astro/MP Photometry/$MP2021
 Session Control Filename = session.ini
 Session Log Filename = session.log
@@ -22,9 +22,9 @@ ALCDEF filename prefix = alcdef_
 Canopus filename prefix = canopus_
 
 [Color]
-# Used only by MP color photometry (workflow_color.py).
-Color Control Filename = color_control.ini
-Color Control Template Filename = color_control.template
+# Used only by MP color photometry (color.py).
+Color Control Filename = control.ini
+Color Control Template Filename = control.template
 Color Log Filename = mp_color.log
 Color image prefix = Image_Color_
 
