progress on color.py; more refactoring to common.py

--- a/ini/color.template
+++ b/ini/color.template
@@ -1,3 +1,6 @@
+[Color Definition]
+Color Definition Filename = string -> color definition filename
+
 [MP Location]
 MP XY          = string list -> mp xy
 
