--- a/test/$color_for_test/MP_20/AN20201126/color-SAVE.ini
+++ b/test/$color_for_test/MP_20/AN20201126/color-SAVE.ini
@@ -4,7 +4,7 @@
 Filename = color.template
 
 [Color Definition]
-Color Definition Filename = ColorDef_Sloan2colors_fromVRI.ini
+Color Definition Filename = ColorDef_Sloan2colors_from VRI.ini
 
 [MP Location]
 # Exactly 2 MP XY, one per line (typically earliest and latest FITS):
