--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -9,7 +9,7 @@ Observer ini = EVD.ini
 
 [Session]
 # Used only by MP session (lightcurve) photometry (session.py).
-Session Top Directory = C:/Astro/MP Photometry/$MP2021
+Session Top Directory = C:/Astro/MP Photometry
 Session Control Filename = session.ini
 Session Log Filename = session.log
 df_images filename = df_images_all.csv
@@ -23,9 +23,10 @@ Canopus filename prefix = canopus_
 
 [Color]
 # Used only by MP color photometry (color.py).
-Color Control Filename = control.ini
-Color Control Template Filename = control.template
-Color Log Filename = mp_color.log
+Color Definition Filename = ColorDef_Sloan2colors_from VRI.ini
+Color Top Directory = C:/Astro/MP Color
+Color Control Filename = color.ini
+Color Log Filename = color.log
 Color image prefix = Image_Color_
 
 [Other]
