--- a/ini/defaults.template
+++ b/ini/defaults.template
@@ -11,17 +11,17 @@ df_images filename        = string -> df_images filename
 df_comps filename         = string -> df_comps filename
 df_comp_obs filename      = string -> df_comp_obs filename
 df_mp_obs filename        = string -> df_mp_obs filename
-
 Session image prefix      = string -> session image prefix
 Fit summary filename      = string -> fit summary filename
 ALCDEF filename prefix    = string -> alcdef filename prefix
 Canopus filename prefix   = string -> canopus filename prefix
 
 [Color]
-Color Top Directory     = string -> color top directory
-Color Control Filename  = string -> color control filename
-Color Log Filename      = string -> color log filename
-Color image prefix      = string -> color image prefix
+Color Definition Filename = string -> color definition filename
+Color Top Directory       = string -> color top directory
+Color Control Filename    = string -> color control filename
+Color Log Filename        = string -> color log filename
+Color image prefix        = string -> color image prefix
 
 [Other]
 MPfile directory   = string -> mpfile directory
