--- a/ini/color/ColorDef_Sloan2colors_fromVRI.ini
+++ b/ini/color/ColorDef_Sloan2colors_fromVRI.ini
@@ -1,7 +1,9 @@
 # ColorDef_Sloan2colors_fromVRI.ini
 # Defines color workflow in which two Sloan colors SG-SR and SR-SI are
 #    determined from images taken in 3 Johnson-Cousins filters V, R, and I.
+
 [Targets]
+# One target color defined per line.
 Target Colors = SG-SR
                 SR-SI
 
@@ -19,3 +21,4 @@ Transform CI = SR-SI
 Name = Johnson-Cousins I
 Target Passband = SI
 Transform CI = SR-SI
+
