--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -23,7 +23,7 @@ Canopus filename prefix = canopus_
 
 [Color]
 # Used only by MP color photometry (color.py).
-Color Definition Filename = ColorDef_Sloan2colors_from VRI.ini
+Color Definition Filename = ColorDef_Sloan2colors_fromVRI.ini
 Color Top Directory = C:/Astro/MP Color
 Color Control Filename = color.ini
 Color Log Filename = color.log
