--- a/ini/instrument/BoreaC14.ini
+++ b/ini/instrument/BoreaC14.ini
@@ -33,8 +33,10 @@ Mag Exposures = Clear  13 60,  14 80,  15 160, 16 300, 17 600, 17.5 900,
                 SR     13 120, 14 160, 15 320, 16 600, 17 900,
                 SI     13 120, 14 160, 15 320, 16 600, 17 900
 # Transforms = Filter Passband CI_pb1 CI_pb2 1st-order_tr [2nd-order tr] # one only per line
+# ***** Clear is ok, but SR, V, R, and I need much better values from experiment.
 Transforms = Clear SR SR SI   +0.4  -0.6,
              SR    SR SR SI   -0.03,
+			 V     SG SG SR   -0.015,
              R     SR SR SI   -0.15,
              I     SI SR SI   -0.11
 Default Color Filters = R   I
