--- a/ini/site/DSW.ini
+++ b/ini/site/DSW.ini
@@ -15,5 +15,9 @@ Elevation = 2210
 # Coldest date of each year in mm-dd.
 Coldest Date = 01-25
 # Each line: filter summer_extinction winter_extinction
-Extinctions = Clear 0.16 0.14,
+# Approximate values, but that's ok.
+Extinctions = Clear 0.18 0.14,
+              V     0.20 0.15,
+              R     0.16 0.12,
               I     0.11 0.08
+
