--- a/test/$color_for_test/MP_20/AN20201126/color.ini
+++ b/test/$color_for_test/MP_20/AN20201126/color.ini
@@ -1,4 +1,4 @@
-# This is C:\Dev\mp2021\test\$color_for_test\MP_20\AN20201126\control.ini.
+# This is C:\Dev\mp2021\test\$color_for_test\MP_20\AN20201126\color.ini.
 
 [Ini Template]
 Filename = color.template
@@ -24,6 +24,13 @@ Min Catalog ri color = -0.20
 Max Catalog ri color = +0.64
 
 [Regression]
-# Extinctions from Site .ini file.
-# Transforms from Instrument .ini file
+# Extinctions from Site file 'DSW.ini', adjusted for observing night.
+# Overwrite if needed (rare):
+Extinctions =  V        0.1615
+               R        0.1292
+               I        0.0869
+# Transforms from Instrument file 'BoreaC14.ini'.
+Transforms =   V       -0.015
+               R       -0.15
+               I       -0.11
 Fit Vignette = Yes
