color.py: comp regression coded, needs testing

--- a/ini/color/ColorDef_Sloan2colors_fromVRI.ini
+++ b/ini/color/ColorDef_Sloan2colors_fromVRI.ini
@@ -7,6 +7,11 @@
 Target Colors = SG-SR
                 SR-SI
 
+[Reference]
+# Reference filter and passband must match in Filter sections below.
+Filter = R
+Passband = SR
+
 [Filter V]
 Name = Johnson-Cousins V
 Target Passband = SG
