session.py: do_transform() working

--- a/ini/instrument/BoreaCDK20.ini
+++ b/ini/instrument/BoreaCDK20.ini
@@ -11,13 +11,17 @@ Max V Magnitude = 18
 Model = PlaneWave L-500
 
 [OTA]
-Model = Celestron C14 Edge
-Aperture = 0.35
+Model = PlaneWave CDK 20
+Aperture = 0.50
+
+[Rotator]
+Position_Angle_At_Rotator_Angle_Zero = 0
+Rotator_Angle_Positive_Clockwise = True
 
 [Camera]
 Model = SBIG STXL-6303E
-X Pixels = 3072
-Y Pixels = 2047
+X Pixels = 4096
+Y Pixels = 4096
 # Gain is in electrons/ADU.
 CCD Gain = 1.57
 Saturation ADU = 54000
@@ -43,8 +47,8 @@ Default Color Filters = R   I
 Default Color Index =  SR - SI
 
 [Scale]
-Min FWHM Pixels = 1.5
-Max FWHM Pixels = 14
+Min FWHM Pixels = 2
+Max FWHM Pixels = 15
 Nominal FWHM Pixels = 7
 
 [Timing]
