color.py: do_color() workflow working

--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -4,7 +4,7 @@ Filename = defaults.template
 [Other ini files]
 # These point to other .ini files that are normally used.
 Instrument ini = BoreaC14.ini
-Site ini = DSW.ini
+Site ini = NMS.ini
 Observer ini = EVD.ini
 
 [Session]
@@ -23,7 +23,7 @@ Canopus filename prefix = canopus_
 
 [Color]
 # Used only by MP color photometry (color.py).
-Color Definition Filename = ColorDef_Sloan2colors_fromVRI.ini
+Color Definition Filename = ColorDef_Sloan2colors_from_Sloan.ini
 Color Top Directory = C:/Astro/MP Color
 Color Control Filename = color.ini
 Color Log Filename = color.log
