--- a/ini/instrument/BoreaC14.ini
+++ b/ini/instrument/BoreaC14.ini
@@ -18,7 +18,7 @@ Aperture = 0.35
 Model = SBIG STXL-6303E
 X Pixels = 3072
 Y Pixels = 2047
-# Gain is in electrons/ADU.
+; Gain is in electrons/ADU.
 CCD Gain = 1.57
 Saturation ADU = 54000
 Vignetting Pct At Corner = 38
@@ -27,19 +27,25 @@ Vignetting Pct At Corner = 38
 Pinpoint Pixel Scale Multiplier = 0.99388
 
 [Filters]
-Available = B V R I Clear SG SR SI
-# Mag Exposure = Filter v_mag secs, v_mag secs, ...
-Mag Exposures = Clear  13 60,  14 80,  15 160, 16 300, 17 600, 17.5 900,
+Available = BB Clear SG SR SI
+; Mag Exposure = Filter v_mag secs, v_mag secs, ...
+Mag Exposures = BB     13 60,  14 80,  15 160, 16 300, 17 600, 17.5 900,
+                Clear  13 60,  14 80,  15 160, 16 300, 17 600, 17.5 900,
+                SG     13 120, 14 160, 15 320, 16 600, 17 900,
                 SR     13 120, 14 160, 15 320, 16 600, 17 900,
                 SI     13 120, 14 160, 15 320, 16 600, 17 900
-# Transforms = Filter Passband CI_pb1 CI_pb2 1st-order_tr [2nd-order tr] # one only per line
-# VRI to Sloans: 2021-04-18.
+; Transforms = Filter Passband CI_pb1 CI_pb2 1st-order_tr [2nd-order tr] # one only per line
+; VRI to Sloans: 2021-04-18.
+; Sloan to Sloan: artificial numbers pending observations.
 Transforms = Clear SR SR SI   +0.4  -0.6,
 			 V     SG SG SR   -0.510
              R     SR SR SI   -0.194
              I     SI SR SI   -0.216
              BB    SR SR SI   -0.131
-Default Color Filters = R   I
+             SG    SG SG SR   -0.05
+             SR    SR SR SI   -0.04
+             SI    SI SR SI   -0.03
+Default Color Filters = BB
 Default Color Index =  SR - SI
 
 [Scale]
