--- a/ini/color/ColorDef_Sloan2colors_from_Sloan.ini
+++ b/ini/color/ColorDef_Sloan2colors_from_Sloan.ini
@@ -1,14 +1,15 @@
-# ColorDef_Sloan2colors_fromVRI.ini
-# Defines color workflow in which two Sloan colors SG-SR and SR-SI are
-#    determined from images taken in 3 Johnson-Cousins filters V, R, and I.
+; ColorDef_Sloan2colors_from_Sloan.ini
+; Defines color workflow in which two Sloan colors SG-SR and SR-SI are
+;    determined from images taken in 3 Sloan filters SG, SR, and SI (= Sloan g', r', i').
+; Caution: SG, SR, and SI may refer either to physical filters or to standard passbands.
 
 [Targets]
-# One target color defined per line.
+; One target color defined per line.
 Target Colors = SG-SR
                 SR-SI
 
 [Reference]
-# Reference filter and passband must match in Filter sections below.
+; Reference filter and passband must match in Filter sections below.
 Filter = SR
 Passband = SR
 
