Updated for CDK20 OTA; added InstMagSlope to regressions

--- a/ini/defaults.ini
+++ b/ini/defaults.ini
@@ -3,7 +3,7 @@ Filename = defaults.template
 
 [Other ini files]
 # These point to other .ini files that are normally used.
-Instrument ini = BoreaC14.ini
+Instrument ini = BoreaCDK20.ini
 Site ini = NMS.ini
 Observer ini = EVD.ini
 
