--- a/ini/instrument/BoreaCDK20.ini
+++ b/ini/instrument/BoreaCDK20.ini
@@ -19,38 +19,38 @@ Position_Angle_At_Rotator_Angle_Zero = 0
 Rotator_Angle_Positive_Clockwise = True
 
 [Camera]
-Model = SBIG STXL-6303E
-X Pixels = 4096
+Model = SBIG AC4040M
+X Pixels = 4112
 Y Pixels = 4096
 # Gain is in electrons/ADU.
 CCD Gain = 1.57
-Saturation ADU = 54000
-Vignetting Pct At Corner = 38
+Saturation ADU = 43800
+Vignetting Pct At Corner = 12
 
 [Plate Solution]
 Pinpoint Pixel Scale Multiplier = 0.99388
 
 [Filters]
-Available = B V R I Clear SG SR SI
+Available = GG495 Clear SG SR SI
 # Mag Exposure = Filter v_mag secs, v_mag secs, ...
 Mag Exposures = Clear  13 60,  14 80,  15 160, 16 300, 17 600, 17.5 900,
                 SR     13 120, 14 160, 15 320, 16 600, 17 900,
                 SI     13 120, 14 160, 15 320, 16 600, 17 900
 # Transforms = Filter Passband CI_pb1 CI_pb2 1st-order_tr [2nd-order tr] # one only per line
-# VRI to Sloans: 2021-04-18.
-Transforms = Clear SR SR SI   +0.4  -0.6,
-			 V     SG SG SR   -0.510
-             R     SR SR SI   -0.194
-             I     SI SR SI   -0.216
-             BB    SR SR SI   -0.131
-Default Color Filters = R   I
+Transforms = Clear SR SR SI   0  0,
+             GG495 SR SR SI   0,
+             SG    SG SG SR   0,
+             SR    SR SR SI   0,
+             SI    SR SR SI   0
+
+Default Color Filters = SR SI
 Default Color Index =  SR - SI
 
 [Scale]
-Min FWHM Pixels = 2
-Max FWHM Pixels = 15
-Nominal FWHM Pixels = 7
+Min FWHM Pixels = 2.5
+Max FWHM Pixels = 12
+Nominal FWHM Pixels = 6.66
 
 [Timing]
-Exposure Overhead = 20
-Max Exposure No Guiding = 119
+Exposure Overhead = 15
+Max Exposure No Guiding = 480
